--- a/README
+++ b/README
@@ -7,21 +7,21 @@ icons including: Line, Ellipse, Circle, Rectangle, Freehand, Eraser, and
 Spraycan.
 
 Runtime requirements:
-  cygwin-1.7.1-1
+  cygwin-1.7.5-1
   libgcc1-4.3.4-3
-  libkdecore5-4.3.4-1
-  libQt3Support4-4.5.3-2
-  libQtCore4-4.5.3-2
-  libQtGui4-4.5.3-2
-  libQtXml4-4.5.3-2
+  libkdecore5-4.4.2-1
+  libQt3Support4-4.6.2-1
+  libQtCore4-4.6.2-1
+  libQtGui4-4.6.2-1
+  libQtXml4-4.6.2-1
   libstdc++6-4.3.4-3
 
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-10
-  binutils-2.19.51-1
+  binutils-2.20.51-1
   cmake-2.8.0-11
-  cygport-0.9.10-1
+  cygport-0.9.83-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
   make-3.81-2
@@ -31,24 +31,27 @@ Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/4.3.3/src/extragear/
+  ftp://ftp.kde.org/pub/kde/stable/4.4.0/src/extragear/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kiconedit-4.3.3-X-src.tar.bz2
+  unpack kiconedit-4.4.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kiconedit-4.3.3-X.cygport all
+  cygport ./kiconedit-4.4.0-X.cygport all
 
 This will create:
-  /usr/src/kiconedit-4.3.3-X-src.tar.bz2
-  /usr/src/kiconedit-4.3.3-X.tar.bz2
+  /usr/src/kiconedit-4.4.0-X-src.tar.bz2
+  /usr/src/kiconedit-4.4.0-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 4.4.0-1 -----
+Version bump for KDE 4.4.
 
 ----- version 4.3.3-1 -----
 Version bump for KDE 4.3.
